# http-smtp-rele

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  README.md  ROADMAP.md
contrib/linux/: http-smtp-rele.service  http-smtp-rele.sysusers  install.sh
contrib/openbsd/: doas.conf.example  install.sh
contrib/openbsd/rc.d/: http_smtp_rele
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/http-smtp-rele/: Cargo.toml
crates/http-smtp-rele/migrations/: 001_initial.sql
crates/http-smtp-rele/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  logging.rs  request_id.rs  sanitize.rs  status_redis.rs  status_sqlite.rs  tests.rs  validation.rs
crates/http-smtp-rele/src/api/: health.rs  metrics_handler.rs  send_bulk.rs
crates/http-smtp-rele/src/config/: validate.rs
crates/http-smtp-rele/tests/: common.rs  integration_tests.rs  mail_tests.rs  smtp_stub.rs
docs/: README.md  api.md  book.toml  configuration.md  faq.md  getting-started.md  openbsd.md
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/src/development/: architecture.md  contributing.md  testing.md
docs/src/guides/: bulk-sending.md  status-tracking.md
docs/src/operations/: deployment.md  reverse-proxy.md  security-checklist.md  security.md
examples/: curl-send.sh  http-smtp-rele.toml  openbsd-rc.d-http_smtp_rele
rfcs/: README.md
rfcs/done/: 001-rfc-governance.md  002-rfc-template.md  003-rfc-integrity-check.md  004-project-quality-gates.md  010-runtime-architecture.md  011-application-state-request-context.md  012-error-model.md  013-logging-foundation.md  014-graceful-startup-shutdown.md  020-configuration-schema.md  021-config-loading-validation.md  022-secret-handling-redaction.md  023-mail-policy-configuration.md  024-server-security-configuration.md  025-smtp-configuration.md  030-http-api-surface.md  031-json-request-response-contract.md  032-error-response-contract.md  033-content-type-body-handling.md  034-health-readiness-endpoints.md  035-request-id-policy.md  036-submission-status-api.md  040-api-key-authentication.md  041-source-ip-trusted-proxy.md  042-api-key-policy-permissions.md  043-constant-time-comparison.md  044-authentication-failure-behavior.md  050-strict-request-validation.md  051-header-injection-prevention.md  052-recipient-address-validation.md  053-body-subject-limits.md  060-mail-construction.md  061-smtp-relay-transport.md  062-smtp-error-mapping.md  063-readiness-check.md  064-sendmail-pipe-deferral.md  070-rate-limit-model.md  071-token-bucket.md  072-rate-limit-ordering.md  073-rate-limited-response.md  (+115 more)
rfcs/proposed/: 100-integration-test-harness.md  101-smtp-stub-server.md  102-security-regression-tests.md  103-e2e-test-scenarios.md
scripts/: check-rfcs.sh
src/: auth.rs  config.rs  error.rs  lib.rs  mail.rs  main.rs  metrics.rs  policy.rs  rate_limit.rs  sanitize.rs  security.rs  smtp.rs  status.rs  status_memory.rs  status_redis.rs  status_sqlite.rs  tests.rs  validation.rs
src/api/: health.rs  keys.rs  metrics_handler.rs  mod.rs  send.rs  send_bulk.rs  submissions.rs
src/config/: validate.rs
tests/: bulk_tests.rs  common.rs  integration_tests.rs  status_tests.rs
