[package]
name = "http-smtp-rele"
version = "0.3.0"
edition = "2021"
authors = ["nabbisen"]
license = "Apache-2.0"
description = "Minimal, secure HTTP-to-SMTP submission relay"
repository = "https://github.com/nabbisen/http-smtp-rele"

[[bin]]
name = "http-smtp-rele"
path = "src/main.rs"

[dependencies]
axum            = "0.8"
tokio           = { version = "1", features = ["full"] }
tower           = { version = "0.5", features = ["limit"] }
tower-http      = { version = "0.6", features = ["limit", "timeout", "trace"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
lettre          = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror       = "2"
clap            = { version = "4", features = ["derive"] }
ipnet           = "2"
subtle          = "2"
uuid            = { version = "1", features = ["v4"] }
anyhow          = "1"
arc-swap        = "1"

[target.'cfg(target_os = "openbsd")'.dependencies]
libc            = "0.2"

[dev-dependencies]
tokio           = { version = "1", features = ["full"] }
tower           = { version = "0.5", features = ["limit"] }
http-body-util  = "0.1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
