[workspace]
members = [".", "crates/cli"]
resolver = "2"

[package]
name = "http-smtp-rele"
version = "0.10.0"
edition = "2021"
authors = ["nabbisen"]
license = "Apache-2.0"
description = "Minimal, secure HTTP-to-SMTP submission relay"
repository = "https://github.com/nabbisen/http-smtp-rele"


[lib]
name = "http_smtp_rele"
path = "src/lib.rs"

[dependencies]
axum            = "0.8"
tokio           = { version = "1", features = ["full"] }
tower           = { version = "0.5", features = ["limit"] }
tower-http      = { version = "0.6", features = ["limit", "timeout", "trace"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
lettre          = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror       = "2"
clap            = { version = "4", features = ["derive"] }
ipnet           = "2"
subtle          = "2"
uuid            = { version = "1", features = ["v4"] }
anyhow          = "1"
arc-swap        = "1"
rusqlite        = { version = "0.32", features = ["bundled"], optional = true }
axum-server     = { version = "0.7", features = ["tls-rustls"], optional = true }
async-trait     = "0.1"
ulid            = { version = "1", features = ["serde"] }
chrono          = { version = "0.4", features = ["serde"] }
prometheus      = { version = "0.13", default-features = false }
base64          = "0.22"

[target.'cfg(target_os = "openbsd")'.dependencies]
libc            = "0.2"

[dev-dependencies]
base64 = "0.22"
tokio           = { version = "1", features = ["full"] }
tower           = { version = "0.5", features = ["limit"] }
http-body-util  = "0.1"
tempfile        = "3"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"


[features]
default = []
sqlite  = ["dep:rusqlite"]
tls     = ["dep:axum-server"]
