[package]
name        = "http-smtp-rele-cli"
version     = "0.10.0"
edition     = "2021"
description = "CLI binary for http-smtp-rele"

[[bin]]
name = "http-smtp-rele"
path = "src/main.rs"

[dependencies]
http-smtp-rele     = { path = "../.." }
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum               = "0.8"
anyhow             = "1"

[target.'cfg(target_os = "openbsd")'.dependencies]
libc = "0.2"
