[package]
name        = "http-smtp-rele-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "CLI binary for http-smtp-rele"
publish     = false   # distributed via release tarballs, not crates.io

[[bin]]
name = "http-smtp-rele"
path = "src/main.rs"

[dependencies]
# Internal — path + version so `cargo package` can verify (replaces path with
# registry lookup during verification; version must match workspace.package.version).
http-smtp-rele = { workspace = true }
# HTTP / async
axum            = { workspace = true }
tokio           = { workspace = true }
# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
# CLI parsing
clap = { workspace = true }
# Error handling
anyhow = { workspace = true }
# Optional TLS server (mirrors lib feature)
axum-server = { workspace = true, optional = true }

[target.'cfg(target_os = "openbsd")'.dependencies]
libc = { workspace = true }

[features]
default = []
sqlite  = ["http-smtp-rele/sqlite"]
tls     = ["http-smtp-rele/tls", "dep:axum-server"]
redis   = ["http-smtp-rele/redis"]
